--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+.share {
+   background-color: pink;
+   font-family: verdana, DejaVuSans, sans-serif;
+   font-size: 24px;
+}
+
+#number2 {
+    color: #0000FF;
+    font-size: 36px;
+}
+
+#number4 {
+    background-color: #00FF00;
+    font-size: 24px;
+    font-weight: bold;
+}
